force-app/main/default/objects/Car_Configuration__c/Car_Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <displayFormat>CFG-{000000}</displayFormat>
        <label>Car Configuration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>