force-app/main/default/objects/Car_Configuration__c/fields/Allotted_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Allotted_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allotted Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Car Configurations</relationshipLabel>
    <relationshipName>Car_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>