force-app/main/default/objects/Car_Configuration__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Car Model</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Car Configurations</relationshipLabel>
    <relationshipName>Car_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>