force-app/main/default/objects/Car_Configuration__c/fields/Selected_Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Selected_Exterior_Color__c</fullName>
    <label>Selected Exterior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exterior_Colors</valueSetName>
    </valueSet>
</CustomField>