force-app/main/default/objects/Car_Configuration__c/fields/Selected_Interior_Color__c.field-meta.xml
<CustomField>
    <fullName>Selected_Interior_Color__c</fullName>
    <label>Selected Interior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interior_Colors</valueSetName>
    </valueSet>
</CustomField>