force-app/main/default/objects/Car_Configuration__c/fields/Selected_Range__c.field-meta.xml
<CustomField>
    <fullName>Selected_Range__c</fullName>
    <label>Selected Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Range_Options</valueSetName>
    </valueSet>
</CustomField>