force-app/main/default/objects/Car_Configuration__c/fields/Vehicle_Order__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Order</label>
    <referenceTo>Vehicle_Order__c</referenceTo>
    <relationshipLabel>Car Configurations</relationshipLabel>
    <relationshipName>Car_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>